# website-chat

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/website_chat/: crawl_and_save_results.py  embedder.py  prompts.py  search_docs.py  settings.py  website_chat.py
