[project]
name = "website-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crawl4ai>=0.5.0.post4",
    "pydantic-ai>=0.0.41",
    "rich>=13.9.4",
    "sentence-transformers>=3.4.1",
]


[project.scripts]
website-chat = "website_chat.website_chat:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
